--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.1",
+    "form-data": "^4.0.0",
     "lodash.debounce": "^4.0.8",
+    "moment-timezone": "^0.5.45",
     "react": "^18.2.0",
+    "react-datetime": "^3.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.5",
     "react-zoom-pan-pinch": "^3.4.4",
     "web-vitals": "^2.1.4"
   },
