--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-datepicker": "^6.9.0",
     "react-datetime": "^3.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
     "react-zoom-pan-pinch": "^3.4.4",
@@ -42,6 +43,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {}
+  }
 }
